[package]
name = "currentcost"
version = "0.1.0"
authors = ["Tolien <tolien@users.noreply.github.com>"]
edition = "2018"

[dependencies]
postgres = { version = "0.19.9", features = ["with-chrono-0_4" ] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
clap = "4.5.23"
toml = "0.8.19"
serialport = { version = "4.6.1", default-features = false }
log = "0.4.22"
roxmltree = "0.20.0"
fern = { version = "0.7.1", features = ["colored"] }
signal-hook = "0.3.17"

[[bin]]
name = "store"
path = "src/store.rs"

[[bin]]
name = "connect"
path = "src/connect.rs"

[profile.dev]
split-debuginfo = "unpacked"
