[package]
name = "currentcost"
version = "0.1.0"
authors = ["Tolien <tolien@users.noreply.github.com>"]
edition = "2018"

[dependencies]
postgres = { version = "0.19.10", features = ["with-chrono-0_4" ] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
clap = "4.5.34"
toml = "0.8.20"
serialport = { version = "4.7.1", default-features = false }
log = "0.4.27"
roxmltree = "0.20.0"
fern = { version = "0.7.1", features = ["colored"] }
signal-hook = "0.3.17"

[[bin]]
name = "store"
path = "src/store.rs"

[[bin]]
name = "connect"
path = "src/connect.rs"

[profile.dev]
split-debuginfo = "unpacked"
